# vigilant-winner

./: .bumpversion.cfg  .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements-dev.txt  which_samples.py
reanalysis/: annotation.py  hail_filter_and_label.py  interpretation_runner.py  mt_to_vcf.py  utils.py
reanalysis/vep/: jobs.py
src/talos/: RunHailFiltering.py  ValidateMOI.py  VcfToMt.py  config.py  models.py  utils.py
test/: test_moi_tests.py
